--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "firebase": "^10.5.2",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-swipeable-views": "^0.14.0",
-    "zustand": "^4.4.5"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-swipeable-views": "^0.13.5",
