--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.30",
     "@types/react-swipeable-views": "^0.13.5",
     "@types/react-swipeable-views-utils": "^0.13.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
