--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "animate.css": "^4.1.1",
     "firebase": "^10.5.2",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
